kubernetes/app/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: food-auth-backend-deployment
  namespace: food
  labels:
    app: food-auth-backend
spec:
  replicas: 4
  selector:
    matchLabels:
      app: food-auth-backend
  template:
    metadata:
      labels:
        app: food-auth-backend
    spec:
      containers:
        - name: food-auth-backend
          image: yashbansod2003/food_autentication:latest
          imagePullPolicy: Always
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 5000
