kubernetes/app/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: food-auth-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  namespace: food
spec:
  rules:
    - http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: food-auth-backend-service
                port:
                  number: 5000
